Added edit options for athlete users on profile

--- a/app/assets/stylesheets/athlete.css.scss
+++ b/app/assets/stylesheets/athlete.css.scss
@@ -87,6 +87,12 @@
   bottom: 260px;
 }
 
+.athlete-options {
+  float: right;
+  position: relative;
+  bottom: 360px;
+}
+
 table.table-dark {
   margin-top: 50px;
   width: 300px;
