--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,9 @@
 .user-form {
-  width: 30%;
+  width: 40%;
   margin: 0 auto;
+  background-color: #444;
+  border-radius: 10px;
+  padding: 40px;
 
   h2 {
     margin-bottom: 30px;
