--- a/app/views/statistics/edit.html.erb
+++ b/app/views/statistics/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Statistic</h1>
+<div class="user-form">
+  <h1>Editing Statistic</h1>
 
-<%= render 'statisticform', statistic: @statistic %>
+  <%= render 'shared/statisticform', statistic: @statistic %>
 
-<%= link_to 'Show', @statistic %> |
-<%= link_to 'Back', statistics_path %>
+  <br><%= link_to 'Back', statistics_path, class: "btn btn-info" %>
+</div>
